welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:7: error: not found: value estSurJaune
	}while(estSurJaune())
               ^