welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
if(!estSurBlanc())
{
	do
	{
		avance()
	}while(estSurJaune())
}
